# monorepo_mcp

./: .dockerignore  .env.template  BOOTSTRAP_PROMPT.md  BOOTSTRAP_SERVER_PROMPT.md  Claude Desktop Configuration  DOCKER-README.md  DOCKER.md  Dockerfile.production  Makefile  README.md  README_MONOREPO.md  SETUP_SUMMARY.md  build-postgres-mcp.sh  config.yaml  cursor-mcp-config-detailed.json  cursor-mcp-config-simple.json  cursor-mcp-config-working.json  cursor-mcp-config.json  database-server.pid  deploy-postgres-mcp.sh  deployment.sh  docker-compose.all.yml  docker-compose.production.yaml  docker-compose.production.yml  filesystem-server.pid  health_check.py  nginx.conf  production-mcp-server.service  production_mcp_server.py  pyproject.toml  requirements.txt  setup.py  start_database_server.py  start_filesystem_server.py  test_database.sh  test_database_tools.py  test_production.sh  test_resume.docx
config/: database_server.yaml  filesystem_server.yaml  postgres_server.yaml
core/: __init__.py  base_server.py  config.py  metrics.py  security.py
core/tools/: __init__.py  admin_tools.py  (+1 more)
docs/: api.md
examples/: start_database_server.py  start_filesystem_server.py
mcp_core/: config.py  rate_limiter.py  session.py
mcp_database/: __init__.py  __main__.py  server.py  tools.py
mcp_filesystem/: server.py  tools.py
scripts/: build-all-servers.sh  build-rest-api-mcp.sh  deploy-rest-api-mcp.sh  run-all-servers.sh  run-filesystem-mcp.sh  run-postgres-mcp.sh  run-rest-api-mcp.sh  start_all_servers.sh  stop-all-servers.sh  stop_all_servers.sh
tests/: test_core.py
(+55 files in other folders)
