[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-monorepo"
version = "1.0.0"
description = "Monorepo for MCP (Model Context Protocol) servers"
authors = [
    {name = "MCP Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.0",
    "aiohttp>=3.8.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


